# kwxFFI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  files_list.cmake
%TEMP%/kwxgen_fortran_test/: wx_controls.f90  wx_dialogs.f90  wx_events.f90  wx_frame.f90  wx_menus.f90  wx_sizers.f90  wx_window.f90
.github/: copilot-instructions.md
.github/agents/: kwxFFI.agent.md  kwxgen.agent.md
.github/agents.save/: kwxFFI.agent.md  kwxgen.agent.md
.github/workflows/: build-win-reusable.yml  daily_build.yml  weekly_build.yml
docs/: decisions.md  overview.md
examples/CApp/: README.md  example_main.c  kwxApp.cpp  kwxApp.h
examples/SampleApp/: README.md  SampleApp.cpp  SampleApp.h
include/: kwx_classes.h  kwx_constants.h  kwx_def.h  kwx_events.h  kwx_glue.h  kwx_grid.h  kwx_keys.h  kwx_types.h  kwx_wrapper.h  wrapper.h  wxc_types.h  wxffi_def.h  wxffi_glue.h  wxffi_grid.h  wxffi_types.h
src/: apppath.cpp  defs.cpp  dragimage.cpp  extra.cpp  glcanvas.cpp  graphicscontext.cpp  hyperlinkctrl.cpp  image.cpp  kwxFFI.manifest  kwx_apppath.cpp  kwx_defs.cpp  kwx_dragimage.cpp  kwx_extra.cpp  kwx_glcanvas.cpp  kwx_graphicscontext.cpp  kwx_hyperlinkctrl.cpp  kwx_image.cpp  kwx_mediactrl.cpp  kwx_pickerctrl.cpp  kwx_previewframe.cpp  kwx_printout.cpp  kwx_sckaddr.cpp  kwx_socket.cpp  kwx_sound.cpp  kwx_stc.cpp  kwx_stc_gen.cpp  kwx_std.cpp  kwx_stream.cpp  kwx_taskbaricon.cpp  kwx_textstream.cpp  kwx_treectrl.cpp  kwx_wrapper.cpp  mediactrl.cpp  pickerctrl.cpp  previewframe.cpp  printout.cpp  sckaddr.cpp  socket.cpp  sound.cpp  stc.cpp  (+160 more)
tools/kwxgen/: CMakeLists.txt  CMakePresets.json  README.md  class_parser.cpp  class_parser.h  constants_parser.cpp  constants_parser.h  defs_parser.cpp  defs_parser.h  emitter.h  events_parser.cpp  events_parser.h  exports_gen.cpp  exports_gen.h  file_writer.h  files_list.cmake  json_dump.cpp  json_dump.h  keys_parser.cpp  keys_parser.h  main.cpp  model.h  parser_utils.cpp  parser_utils.h  verify.cpp  verify.h
tools/kwxgen/lang/: fortran_type_map.h  go_type_map.h  julia_type_map.h  lang_common.h  lang_fortran.cpp  lang_fortran.h  lang_go.cpp  lang_go.h  lang_julia.cpp  lang_julia.h  lang_luajit.cpp  lang_luajit.h  lang_perl.cpp  lang_perl.h  lang_rust.cpp  lang_rust.h  luajit_type_map.h  perl_type_map.h  rust_type_map.h
